--- a/package.json
+++ b/package.json
@@ -13,21 +13,43 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.8.2",
+    "@tiptap/extension-color": "^2.12.0",
+    "@tiptap/extension-image": "^2.12.0",
+    "@tiptap/extension-link": "^2.12.0",
+    "@tiptap/extension-text-align": "^2.12.0",
+    "@tiptap/extension-text-style": "^2.12.0",
+    "@tiptap/extension-underline": "^2.12.0",
+    "@tiptap/pm": "^2.12.0",
+    "@tiptap/react": "^2.12.0",
+    "@tiptap/starter-kit": "^2.12.0",
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.17",
+    "clamscan": "^2.4.0",
+    "clsx": "^2.1.1",
+    "formidable": "^3.5.4",
     "framer-motion": "^11.0.3",
-    "next": "14.1.0",
+    "mysql2": "^3.14.1",
+    "next": "^14.2.28",
     "postcss": "^8.4.33",
+    "prisma": "^6.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "serverless-mysql": "^2.1.0",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
+    "zod": "^3.25.6",
+    "zod-to-ts": "^1.2.0"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/formidable": "^3.4.5",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0"
   }
