--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@auth/prisma-adapter": "^1.6.0",
     "@prisma/client": "^6.8.2",
     "@tiptap/extension-color": "^2.12.0",
     "@tiptap/extension-image": "^2.12.0",
@@ -26,13 +27,18 @@
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
+    "@upstash/ratelimit": "^1.2.1",
+    "@upstash/redis": "^1.34.9",
     "autoprefixer": "^10.4.17",
+    "bcryptjs": "^2.4.3",
     "clamscan": "^2.4.0",
     "clsx": "^2.1.1",
     "formidable": "^3.5.4",
     "framer-motion": "^11.0.3",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
     "next": "^14.2.28",
+    "next-auth": "^5.0.0-beta.15",
     "postcss": "^8.4.33",
     "prisma": "^6.8.2",
     "react": "^18.2.0",
@@ -49,7 +55,9 @@
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/formidable": "^3.4.5",
+    "@types/jsonwebtoken": "^9.0.9",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0"
   }
